fixed spelling during meeting

--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -9,7 +9,12 @@
 \author{
 \textbf{SmartServe}\\
 Christopher McDonald \\ 001312456 \\ \\ 
-Sam Hamel \\ 001112233 \\ \\
+Sam Hamel \\ 001321692 \\ \\
+Harit Patel \\ 001317372 \\ \\
+Nisarg Patel \\ 001322805 \\ \\
+Janak Patel \\ 001307060 \\ \\
+Jared Rayner \\ 001311702 \\ \\
+Sharon Platkin \\ 001316625 \\ \\
 }
 \date{Last compiled on \today}
 
@@ -17,7 +22,7 @@ Sam Hamel \\ 001112233 \\ \\
 \maketitle
 \section*{Project Choice}
 \subsection*{Problem}
-The system we plan to implement will assist single table tennis players during their training. The current problems with this practice is traditionally two people are required to play the game. The current solution for this problem is propping up one half of the table in order to reflect shots delivered by the player back onto their side of the table. However, this does a poor job of simulating the real game as the elapsed time before the ball is returned is much faster and the return speed and direction is not true to real play. There is another problem of not receiving feedback or diagnostics regarding the strengths and weaknesses of the player given particular types of shots.
+The system we plan to implement will assist single table tennis players during their training. The current problems with this practice is traditionally two people are required to play the game. The current solution for this problem is propping up one half of the table in order to reflect shots delivered by the player back onto their side of the table. However, this does a poor job of simulating the real game as the elapsed time before the ball is returned is much shorter and the return speed and direction is not true to real play. There is another problem of not receiving feedback or diagnostics regarding the strengths and weaknesses of the player given particular types of shots.
 \subsection*{Solution}
 Our solution will be a complete system which shoots balls towards the players in various ways. A particular shot can be made of different speeds, angles or positions. Computer vision will assist in the analysis of the returns made by the player to give valuable feedback for improvement while focusing on the player's weaknesses for future training.
 \section*{Project Justification}
