fixed author formatting

--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -5,16 +5,15 @@
 \usepackage{graphicx}   
 \usepackage{amssymb}
 
-\title{Project Choice \& Justification}
+\title{Project Choice \& Justification \\ Tentative Project Name: SmartServe}
 \author{
-\textbf{SmartServe}\\
-Christopher McDonald \\ 001312456 \\ \\ 
-Sam Hamel \\ 001321692 \\ \\
-Harit Patel \\ 001317372 \\ \\
-Nisarg Patel \\ 001322805 \\ \\
-Janak Patel \\ 001307060 \\ \\
-Jared Rayner \\ 001311702 \\ \\
-Sharon Platkin \\ 001316625 \\ \\
+Christopher McDonald \\ 001312456 \\ \and
+Sam Hamel \\ 001321692 \\ \and
+Harit Patel \\ 001317372 \\ \and
+Nisarg Patel \\ 001322805 \\ \and
+Janak Patel \\ 001307060 \\ \and
+Jared Rayner \\ 001311702 \\ \and
+Sharon Platkin \\ 001316625 \\
 }
 \date{Last compiled on \today}
 
