added template and project goals

--- a/documentation/template/template.tex
+++ b/documentation/template/template.tex
@@ -19,7 +19,7 @@
 	\textsc{\large Software \& Mechatronics Capstone}\\[0.5cm] 
 
 	\HRule\\[0.4cm]
-		{\huge\bfseries Project Goals}\\[0.4cm]
+		{\huge\bfseries Document Title}\\[0.4cm]
 	\HRule\\[0.4cm]
 	
 	\begin{minipage}[t][][t]{0.5\textwidth}
@@ -62,8 +62,6 @@
    \noindent\begin{tabularx}{\textwidth}{|l|l|X|l|}
    \hline 
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\
-   \hline 
-   09/26/17 & 0 & Made document structure and template & Christopher McDonald \\
    \hline
    \end{tabularx}
    \caption{Revision History}
@@ -71,11 +69,19 @@
 
 \newpage
 
-\section{Project Summary}
-\section{Success Criteria}
-\section{Mid-Level Goals}
-\section{High-Level Goals}
+% start writing here!
 
+\section{Sample Section}
+\subsection{Sample subsection}
+\subsection{Sample subsection}
+\subsection{Sample subsection}
+\section{Sample Section}
+\subsection{Sample subsection}
+\section{Sample Section}
+\subsection{Sample subsection}
+\subsubsection{Sample subsubsection}
+\subsubsection{Sample subsubsection}
+\section{Sample Section}
 
 
 \end{document}  
