work in progress, testing some git stuff

--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -72,6 +72,7 @@
 \newpage
 
 \section{Project Summary}
+The project will be an automated table tennis trainer
 \section{Success Criteria}
 \section{Mid-Level Goals}
 \section{High-Level Goals}
