made the changes

--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -21,10 +21,9 @@ Sharon Platkin \\ 001316625 \\
 \maketitle
 \section*{Project Choice}
 \subsection*{Problem}
-The system we plan to implement will assist single table tennis players during their training. The current problems with this practice is traditionally two people are required to play the game. The current solution for this problem is propping up one half of the table in order to reflect shots delivered by the player back onto their side of the table. However, this does a poor job of simulating the real game as the elapsed time before the ball is returned is much shorter and the return speed and direction is not true to real play. There is another problem of not receiving feedback or diagnostics regarding the strengths and weaknesses of the player given particular types of shots.
+If a player seeks to improve their table tennis game, hiring a coach is one of the most effective ways to do so. However, this does not come without its challenges. For example, finding one and scheduling them can be difficult depending on the demand of the coach. A coach cannot track the player's historical performance or be able to hit specific locations and speeds while also adapting to how well the player is doing. Lastly, a coach would have a hard time giving analytics to the player in real time during a training session or over many sessions.
 \subsection*{Solution}
-Our solution will be a complete system which shoots balls towards the players in various ways. A particular shot can be made of different speeds, angles or positions. Computer vision will assist in the analysis of the returns made by the player to give valuable feedback for improvement while focusing on the player's weaknesses for future training.
+The solution to solve the above problem must implement the following features. It must shoot balls toward the player with variable speed, spin and locations. It also must track the ball as it is returned to identify successful returns and give feedback to the player on which types of shots are returned more often than others. Lastly, it will change the styles of shots it takes to the locations where the player is the least proficient.
 \section*{Project Justification}
-This project makes a good capstone project because it requires many, if not all of the skills we have learned over our undergraduate education. This includes mechatronics as building the shooting mechanism includes mechanical and electrical components, while also challenging the software students in fields such as computer vision, reinforcement learning algorithms and data analysis. \\ \\
-Many of the team members are avid table tennis players so this project heavily pertains to their interests. The team believes it will be challenging enough to utilize all of our strengths to make an impressive product that we can proud of. 
+This project is perfect for a Software \& Mechatronics Capstone as it requires many of the skills we have developed over our academic lifetime. For example, significant engineering must be done to make the shooting mechanism reliable and satisfy all the degrees of freedom the ball can take. Computer vision must be used to track the ball, and it must do so reliably to provide valuable insight. Lastly, some reinforcement algorithms will be used to balance the needs of exploring different shots for a player and exploiting their weaknesses. Overall, it requires a good mix of software, mechanical and engineering 
 \end{document}  
