fixed up last sentence

--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -25,5 +25,5 @@ If a player seeks to improve their table tennis game, hiring a coach is one of t
 \subsection*{Solution}
 The solution to solve the above problem must implement the following features. It must shoot balls toward the player with variable speed, spin and locations. It also must track the ball as it is returned to identify successful returns and give feedback to the player on which types of shots are returned more often than others. Lastly, it will change the styles of shots it takes to the locations where the player is the least proficient.
 \section*{Project Justification}
-This project is perfect for a Software \& Mechatronics Capstone as it requires many of the skills we have developed over our academic lifetime. For example, significant engineering must be done to make the shooting mechanism reliable and satisfy all the degrees of freedom the ball can take. Computer vision must be used to track the ball, and it must do so reliably to provide valuable insight. Lastly, some reinforcement algorithms will be used to balance the needs of exploring different shots for a player and exploiting their weaknesses. Overall, it requires a good mix of software, mechanical and engineering 
+This project is perfect for a Software \& Mechatronics Capstone as it requires many of the skills we have developed over our academic lifetime. For example, significant engineering must be done to make the shooting mechanism reliable and satisfy all the degrees of freedom the ball can take. Computer vision must be used to track the ball, and it must do so reliably to provide valuable insight. Lastly, some reinforcement algorithms will be used to balance the needs of exploring different shots for a player and exploiting their weaknesses. Overall, it requires a good mix of software, mechanical and engineering skills.
 \end{document}  
