added sharon's feedback

--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -8,11 +8,11 @@
 \title{Project Choice \& Justification \\ Tentative Project Name: SmartServe}
 \author{
 Christopher McDonald \\ 001312456 \\ \and
-Sam Hamel \\ 001321692 \\ \and
 Harit Patel \\ 001317372 \\ \and
-Nisarg Patel \\ 001322805 \\ \and
 Janak Patel \\ 001307060 \\ \and
 Jared Rayner \\ 001311702 \\ \and
+Nisarg Patel \\ 001322805 \\ \and
+Sam Hamel \\ 001321692 \\ \and
 Sharon Platkin \\ 001316625 \\
 }
 \date{Last compiled on \today}
@@ -21,9 +21,9 @@ Sharon Platkin \\ 001316625 \\
 \maketitle
 \section*{Project Choice}
 \subsection*{Problem}
-If a player seeks to improve their table tennis game, hiring a coach is one of the most effective ways to do so. However, this does not come without its challenges. For example, finding one and scheduling them can be difficult depending on the demand of the coach. A coach cannot track the player's historical performance or be able to hit specific locations and speeds while also adapting to how well the player is doing. Lastly, a coach would have a hard time giving analytics to the player in real time during a training session or over many sessions.
+If a player seeks to improve their table tennis game, hiring a coach is one of the most effective ways to do so. However, this does not come without its challenges. For example, finding one and scheduling them can be difficult depending on the demand of the coach. A coach cannot hit specific locations and speeds while also adapting to how well the player is doing. Lastly, a coach would have a hard time giving analytics to the player in real time during a training session or track the player's historical performance over many sessions.
 \subsection*{Solution}
-The solution to solve the above problem must implement the following features. It must shoot balls toward the player with variable speed, spin and locations. It also must track the ball as it is returned to identify successful returns and give feedback to the player on which types of shots are returned more often than others. Lastly, it will change the styles of shots it takes to the locations where the player is the least proficient.
+The solution to solve the above problem must implement the following features. It must shoot balls toward the player with variable speed, spin and locations. It also must track the ball as it is returned to identify successful returns against failed ones. Once it does so, the system can notify the player about which shots the user misses most often. Lastly, it will change the styles of shots it takes to the locations where the player is the least proficient.
 \section*{Project Justification}
 This project is perfect for a Software \& Mechatronics Capstone as it requires many of the skills we have developed over our academic lifetime. For example, significant engineering must be done to make the shooting mechanism reliable and satisfy all the degrees of freedom the ball can take. Computer vision must be used to track the ball, and it must do so reliably to provide valuable insight. Lastly, some reinforcement algorithms will be used to balance the needs of exploring different shots for a player and exploiting their weaknesses. Overall, it requires a good mix of software, mechanical and engineering skills.
 \end{document}  
