--- a/documentation/Justification/Justification.tex
+++ b/documentation/Justification/Justification.tex
@@ -21,9 +21,10 @@ Sharon Platkin \\ 001316625 \\
 \maketitle
 \section*{Project Choice}
 \subsection*{Problem}
-If a player seeks to improve their table tennis game, hiring a coach is one of the most effective ways to do so. However, this does not come without its challenges. For example, finding one and scheduling them can be difficult depending on the demand of the coach. A coach cannot hit specific locations and speeds while also adapting to how well the player is doing. Lastly, a coach would have a hard time giving analytics to the player in real time during a training session or track the player's historical performance over many sessions.
+If a player seeks to improve their table tennis game, the canonical solution would be to hire a coach or to try and play more competitively. However, this does not come without its challenges. If they do play more competitively, this lacks any tools or feedback to improve their abilities. For example, focusing on returning on particular shot is hard with a human opponent with different motives. Moreover, finding an opponent which shares your schedule and matches your skill level can be difficult which can lead to a demotivating or boring game. The alternative, hiring a coach is not a perfect solution either. For example, finding one and scheduling them can be difficult depending on the demand of the coach. A coach cannot hit specific locations and speeds while also adapting to how well the player is doing. Lastly, a coach would have a hard time giving analytics to the player in real time during a training session or track the player's historical performance over many sessions.
 \subsection*{Solution}
-The solution to solve the above problem must implement the following features. It must shoot balls toward the player with variable speed, spin and locations. It also must track the ball as it is returned to identify successful returns against failed ones. Once it does so, the system can notify the player about which shots the user misses most often. Lastly, it will change the styles of shots it takes to the locations where the player is the least proficient.
+Our solution to solve the above problem will consist of an shooting mechanism, shot recommender and a way to identify successful returns from the player. The shooting mechanism must apply different speeds, spins and trajectories to the ball in order to accurately train the user. After understanding the user's weakest points, the shot recommender must begin to apply pressure to those places more so than others so the user can train in those scenarios. After analyzing their game, the system can then provide diagnostics to the user to better understand where how well they preform in different scenarios. \\
+To implement this solution, it will most likely consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server must also be added to store data, provide diagnostics and recommend shots given the user's past data.
 \section*{Project Justification}
 This project is perfect for a Software \& Mechatronics Capstone as it requires many of the skills we have developed over our academic lifetime. For example, significant engineering must be done to make the shooting mechanism reliable and satisfy all the degrees of freedom the ball can take. Computer vision must be used to track the ball, and it must do so reliably to provide valuable insight. Lastly, some reinforcement algorithms will be used to balance the needs of exploring different shots for a player and exploiting their weaknesses. Overall, it requires a good mix of software, mechanical and engineering skills.
 \end{document}  
