--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -72,7 +72,9 @@
 \newpage
 
 \section{Project Summary}
-The project will be a table tennis trainer, comprising of a shooting mechanism, computer vision system and machine learning recommendation algorithm.
+When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback.
+Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system must provide the user with feedback on the quality of their game.
+The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \section{Success Criteria}
 The following items are required to be completed for this project to be a success:
 \begin{itemize}
