added feedback from nish

--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -70,13 +70,16 @@
 \end{figure}
 
 \newpage
-
+\section{Mission Statement}
+The sport of Table Tennis has been enjoyed by many people for over 100 years and is now played all over the world by people of all ages. Despite the increasing popularity, there is a lack of technology being introduced when training the players in order to do this more efficiently. We plan to find a solution which leverages the engineering skills we have learned to aid in training table tennis players.
 \section{Project Summary}
 When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback.
 Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system must provide the user with feedback on the quality of their game.
 The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \section{Success Criteria}
-The following items are required to be completed for this project to be a success:
+To judge how well the system meets the problem described above, several aspects of the system will need to be measured. The first major part is the accuracy and precision of the shooting mechanism with respect to how well it shoots the ball. The second will be how many degrees of freedom can be applied to a shot to vary its characteristics. Lastly, including features in order to better solve the problem in areas like usability, performance and quality. However, for the project to be deemed successful in solving the problem, only the low-level goals will need to be satisfied. 
+\section{Low-Level Goals}
+The following items encompass the low-level goals of the system:
 \begin{itemize}
 \item The system can detect the boundaries of the table to determine valid returns on the system's side
 \item The system can detect valid returns from the user with an accuracy of 90\%
@@ -87,6 +90,7 @@ The following items are required to be completed for this project to be a succes
 \item The system can adjust the shooting frequency
 \end{itemize}
 \section{Mid-Level Goals}
+The following items encompass the mid-level goals of the system:
 \begin{itemize}
 \item The system can detect the boundaries of the table to determine valid shot locations on the user's side
 \item The system can hit each square of a 8x8 grid with an accuracy of 75\%
@@ -99,6 +103,7 @@ The following items are required to be completed for this project to be a succes
 \item The system can shoot at various speeds
 \end{itemize}
 \section{High-Level Goals}
+The following items encompass the high-level goals of the system:
 \begin{itemize}
 \item The system can hit each square of a 16x16 grid with an accuracy of 75\%
 \item The system can apply spin to the shot on a combination of two axes
