added feedback from harit

--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -84,7 +84,7 @@ The following items encompass the low-level goals of the system:
 \item The system can detect the boundaries of the table to determine valid returns on the system's side
 \item The system can detect valid returns from the user with an accuracy of 90\%
 \item The system can hit each square of a 4x4 grid with an accuracy of 75\%
-\item The system can apply a reinforcement learning algorithm to aid in the shot decision
+\item The system can apply a reinforcement learning algorithm to aid in the shot decision when focusing on the user's weak spots
 \item The system can pause and resume operation
 \item The system can calibrate its position and orientation
 \item The system can adjust the shooting frequency
