--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -96,7 +96,7 @@ The following items encompass the mid-level goals of the system:
 \begin{itemize}
 \item The system can detect the boundaries of the table to determine valid shot locations on the user's side
 \item The system can hit each square of a 8x8 grid with an accuracy of 75\%
-\item The system can calibrate its shooting parametres
+\item The system can calibrate its shooting parameters
 \item The system can notify the user of their performance after each shot is taken
 \item The system has multiple modes including `single-shot' and random
 \item The system has leaderboards for all users
