--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -64,15 +64,17 @@
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\
    \hline 
    10/05/17 & 0 & First revision of document completed & Christopher McDonald \& Sharon Platkin \\ \hline
-   10/06/17 & 1 & Second revision to add more sections and text & Christopher McDonald \& Nisarg Patel \& Harit Patel \\
+   10/06/17 & 1 & Second revision to add more sections and text & Christopher McDonald \& Nisarg Patel \& Harit Patel \\ \hline
+   10/06/17 & 2 & Third revision to strengthen the context, proof read and refine the context & Christopher McDonald \& Nisarg Patel \\ \hline
+   10/06/17 & 3 & Fourth revision of document to set realistic goals, remove extra goals to ensure the total number of goals is less then 15 & Christopher McDonald \& Nisarg Patel \& Janak Patel \& Jared Rayner \& Sam Hamel \\
    \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
 
 \newpage
-\section{Mission Statement}
-The sport of Table Tennis has been enjoyed by many people for over 100 years and is now played all over the world by people of all ages. Despite the increasing popularity, there is a lack of technology being introduced when training the players in order to do this more efficiently. We plan to find a solution which leverages the engineering skills we have learned to aid in training table tennis players.
+\section{Team Vision}
+The SmartServe team envisions to provide Table Tennis enthusiasts with an effective training solution which enables any player to improve their game with the help of modern technology and data analytics.
 \section{Project Summary}
 When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback.
 Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system must provide the user with feedback on the quality of their game.
@@ -80,37 +82,30 @@ The system will consist of a electromechanical system to shoot the ball and a co
 \section{Success Criteria}
 To judge how well the system meets the problem described above, several aspects of the system will need to be measured. The first major part is the accuracy and precision of the shooting mechanism with respect to how well it shoots the ball. The second will be how many degrees of freedom can be applied to a shot to vary its characteristics. Lastly, including features in order to better solve the problem in areas like usability, performance and quality. However, for the project to be deemed successful in solving the problem, only the low-level goals will need to be satisfied. 
 \section{Goals}
-\subsection{Low-Level Goals}
+\subsection{Low-Level Goals (P0)}
 The following items encompass the low-level goals of the system:
 \begin{itemize}
-\item The system can detect the boundaries of the table to determine valid returns on the system's side
 \item The system can detect valid returns from the user with an accuracy of 90\%
 \item The system can hit each square of a 4x4 grid with an accuracy of 75\%
-\item The system can apply a reinforcement learning algorithm to aid in the shot decision when focusing on the user's weak spots
-\item The system can pause and resume operation
-\item The system can calibrate its position and orientation
-\item The system can adjust the shooting frequency
+\item The system implements reinforcement learning algorithms
+\item The system can shoot a variety of shots 
+\item The system can provide feedback to the user based on their performance
 \end{itemize}
-\subsection{Mid-Level Goals}
+\subsection{Mid-Level Goals (P1)}
 The following items encompass the mid-level goals of the system:
 \begin{itemize}
-\item The system can detect the boundaries of the table to determine valid shot locations on the user's side
 \item The system can hit each square of a 8x8 grid with an accuracy of 75\%
-\item The system can calibrate its shooting parameters
 \item The system can notify the user of their performance after each shot is taken
 \item The system has multiple modes including `single-shot' and random
-\item The system has leaderboards for all users
-\item The system's state persists after shutting down
-\item The system can apply spin to the shot on one axis
-\item The system can shoot at various speeds
+\item The system can support multiple user profiles
+\item The system can apply top spin to the ball
 \end{itemize}
-\subsection{High-Level Goals}
+\subsection{High-Level Goals (P2)}
 The following items encompass the high-level goals of the system:
 \begin{itemize}
 \item The system can hit each square of a 16x16 grid with an accuracy of 75\%
-\item The system can apply spin to the shot on a combination of two axes
+\item The system can apply top and side spin to the ball
 \item The system can track the ball throughout the complete path travelled across the table
-\item The system can collect the balls returned by the user
 \item The system can shoot from different heights
 \end{itemize}
 
