--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -75,14 +75,12 @@
 \newpage
 \section{Team Vision}
 The SmartServe team envisions to provide Table Tennis enthusiasts with an effective training solution which enables any player to improve their game with the help of modern technology and data analytics.
-\section{Project Summary}
-When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback.
-Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system must provide the user with feedback on the quality of their game.
-The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
+\section{Project Overview}
+When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \section{Success Criteria}
-To judge how well the system meets the problem described above, several aspects of the system will need to be measured. The first major part is the accuracy and precision of the shooting mechanism with respect to how well it shoots the ball. The second will be how many degrees of freedom can be applied to a shot to vary its characteristics. Lastly, including features in order to better solve the problem in areas like usability, performance and quality. However, for the project to be deemed successful in solving the problem, only the low-level goals will need to be satisfied. 
+To judge how well the system meets the problem described above, several aspects of the system will need to be measured. The first major part is the accuracy and precision of the shooting mechanism with respect to how well it shoots the ball. The second will be how many degrees of freedom can be applied to a shot to vary its characteristics. Lastly, including features in order to better solve the problem in areas like usability, performance and quality. However, for the project to be deemed successful in solving the problem, all of the low-level goals need to be satisfied. The mid and high-level goals will be prioritized last after the low-level have all been achieved.
 \section{Goals}
-\subsection{Low-Level Goals (P0)}
+\subsection{Low-Level Goals}
 The following items encompass the low-level goals of the system:
 \begin{itemize}
 \item The system can detect valid returns from the user with an accuracy of 90\%
@@ -91,7 +89,7 @@ The following items encompass the low-level goals of the system:
 \item The system can shoot a variety of shots 
 \item The system can provide feedback to the user based on their performance
 \end{itemize}
-\subsection{Mid-Level Goals (P1)}
+\subsection{Mid-Level Goals}
 The following items encompass the mid-level goals of the system:
 \begin{itemize}
 \item The system can hit each square of a 8x8 grid with an accuracy of 75\%
@@ -100,7 +98,7 @@ The following items encompass the mid-level goals of the system:
 \item The system can support multiple user profiles
 \item The system can apply top spin to the ball
 \end{itemize}
-\subsection{High-Level Goals (P2)}
+\subsection{High-Level Goals}
 The following items encompass the high-level goals of the system:
 \begin{itemize}
 \item The system can hit each square of a 16x16 grid with an accuracy of 75\%
