added some sections

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -149,4 +149,10 @@
 
 \section{Anticipated Changes}
 
+\section{Appendix}
+% diagrams, tables, ... etc.
+
+\subsection{Symbolic Parameters}
+% The definition of the requirements will likely call for SYMBOLIC\_CONSTANTS.
+
 \end{document}  
