added overview to SRS

--- a/documentation/Requirements/Requirements.tex
+++ b/documentation/Requirements/Requirements.tex
@@ -81,22 +81,35 @@
 
 \section{Project Drivers}
 \subsection{The Purpose of the Project}
-% should include problem, lack of current solutions and ideal solution 
+% should include problem, lack of current solutions and ideal solution
+When a player wants to improve their table tennis game, a typical solution is to hire a coach. However, this does not come without its challenges. These include scheduling, focusing on particular shots and receiving in-depth statistical feedback. Our solution to solve the above problem will consist of a shooting mechanism, a way to identify successful returns and a system to recommend different shots. Throughout the training session, the system will provide the user with feedback on the quality of their game. The system will consist of a electromechanical system to shoot the ball and a computer vision system to track the ball's location during flight. A server will also be added to store data, provide diagnostics and recommend shots given the user's past performance.
 \subsection{The Stakeholders}
 % include who ever will lose something if the project fails, dev team / project advisors, any sponsors we get (hatch / forge / thode makerspace)
 \subsubsection{The Client}
 % may omit, as we are the client
+The client for this project would comprise of the development team since both the idea and the execution of the idea will be preformed by such team. It is also important to note the the project advisor, Dr. Alan Wassyng and his teaching assistants will also be involved in the development to provide guidance and critique the work done by the team.
 \subsubsection{The Customers}
 % players or coaches 
+The primary customers of this project are table tennis players. The system should adapt to many playing styles and proficiencies, so segmenting those players down further is not necessary. They are more likely to play competitively, but could also play recreationally with friends or within a club focused around the sport. \\\\
+The secondary customers of this project are table tennis coaches. Although this system could replace a coach, a coach could find value in using this system to aid in training and assist more than one trainee at one time. The system will provide analytics which is very useful when training someone over long periods of time.
 % omitted > \subsubsection{Other Stakeholders}
-
 \subsection{Mandated Constraints}
-% anything which contrains our solutions from external parties
+% anything which constrains our solutions from external parties
+The first constraint placed on the project is time. The deliverable dates and presentation dates have been set, with the last day commencing on April 28, 2018. There is also a budget constraint of \$750 for any parts needed to build the final product.
+% TODO add more
 \subsection{Naming Conventions and Terminology}
 % how we plan to name things
+The following terms and definitions will be used throughout this document:
+\begin{itemize}
+\item \textbf{System}: includes both the hardware and software aspects of the project
+\item \textbf{Team}: all members noted in the \textit{Authors} list
+% TODO Add more
+\end{itemize}
 \subsection{Relevant Facts and Assumptions}
 % Size of table, rules and regulations, etc...
 %User characteristics should go under assumptions.
+The regulation table size, as stated by the International Table Tennis Federation (ITTF), is as follows: 2.74m long, 1.525m wide and 0.76m off the ground. The table must be a uniformly dark colour with a 2cm-thick white line along the edge of the table, as well one running parallel to the 2.74m side in the middle of the table. The net in the middle of the table must be 15.25cm high. \\\\
+A valid serve must hit the servers side first, and then bounce once on the other player's side before being returned. After that is done, a valid return would be when the ball is hit by a player, after bouncing exactly once on their side, and bounces at least one time on the opposing player's side. If a serve touches the net and lands on the opposing player's side, it is a \textit{let}. No points are allocated and the turn must be re-served.
 
 \section{Functional Requirements}
 
